[tool.poetry]
name = "gridlock_2_0"
version = "0.1.0"
description = "Real-time incident severity and congestion prediction system"
authors = ["Gridlock Team <team@gridlock.local>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.11"

# Web Framework & API
fastapi = "^0.104.1"
uvicorn = {extras = ["standard"], version = "^0.24.0"}
pydantic = "^2.5.0"
pydantic-settings = "^2.1.0"

# ML & Data Science
torch = "^2.0.0"
torchvision = "^0.15.0"
lightgbm = "^4.1.0"
scikit-learn = "^1.3.2"
lifelines = "^0.29.0"
pandas = "^2.1.1"
numpy = "^1.26.2"
scipy = "^1.11.4"

# Graph Neural Networks
torch-geometric = "^2.4.0"

# Text Embedding
transformers = "^4.35.2"
sentence-transformers = "^2.2.2"

# Explainability
shap = "^0.43.0"

# Database & Cache
psycopg2-binary = "^2.9.9"
redis = "^5.0.1"
sqlalchemy = "^2.0.23"
alembic = "^1.13.0"

# Dashboard
streamlit = "^1.29.0"
folium = "^0.14.0"
plotly = "^5.18.0"

# Async & Concurrency
aioredis = "^2.0.1"
asyncpg = "^0.28.0"

# Monitoring & Logging
prometheus-client = "^0.19.0"
python-json-logger = "^2.0.7"
structlog = "^24.1.0"

# Utilities
python-dotenv = "^1.0.0"
pyyaml = "^6.0.1"
python-dateutil = "^2.8.2"
pytz = "^2023.3"
requests = "^2.31.0"
httpx = "^0.25.2"

# Testing
pytest = "^7.4.3"
pytest-asyncio = "^0.21.1"
pytest-cov = "^4.1.0"
pytest-mock = "^3.12.0"
hypothesis = "^6.88.0"

# Development
black = "^23.12.0"
isort = "^5.13.2"
flake8 = "^6.1.0"
mypy = "^1.7.1"
pylint = "^3.0.3"
st-theme = "^1.2.3"

[tool.poetry.dev-dependencies]
ipython = "^8.18.1"
jupyter = "^1.0.0"
notebook = "^7.0.6"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 120
target-version = ['py311']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''

[tool.isort]
profile = "black"
line_length = 120
skip = [".gitignore", ".dockerignore"]

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
asyncio_mode = "auto"
addopts = "--cov=src --cov-report=term-missing --cov-report=html"
